# docker-logging-plugin

./: Cargo.toml  Dockerfile  Makefile  README.md  config.json
src/: docker_plugin_api.rs  main.rs
src/generated_protos/: entry.rs  mod.rs
